test/users/thom/topLevelCode.good
topLevelCode.chpl:11: error: no-op procedures are only legal for extern functions
